data/derived/comb/progs/unify/prog4125.ml.out
Characters 60-62:
  Sine e           -> sin(pi*e)
                          ^^
Error: This expression has type float but an expression was expected of type
         int
